# reconf-scheduling

./: CMakeLists.txt  algorithms.cpp  algorithms.hpp  cluster.cpp  lsl.cpp  schedule_test.dzn  scheduling.cpp  scheduling.hpp  util.cpp  util.hpp
data/: generate_lu.py  generate_random.py  rho_300.dzn  rho_30000.dzn  schedule.mzn  schedule_pr.mzn
